# nerf-rust

./: .gitignore  Cargo.toml  Math.md  README.md  design.md  image.ppm  load_llff.py  pyproject.toml  run_nerf.py  rust-toolchain.toml
configs/: fern.txt
crates/nerf/src/: camera.rs  hittable.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs
src/nerf/: Cargo.toml  README.md
src/nerf/src/: camera.rs  hittable.rs  main.rs  material.rs
src/nerf_pytorch/: load_llff.py  run_nerf.py  run_nerf_helpers.py
src/synthesis/: .gitignore  README.md  camera.py  main.py  pyproject.toml  vis.py
src/synthesis/spaceship/: scene.xml  synthesis-visualization.rbl
